buildscript {
    repositories {
        jcenter()
        maven { url = "http://files.minecraftforge.net/maven" }
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
    }
}
apply plugin: 'net.minecraftforge.gradle.forge'

compileJava {
    sourceCompatibility = targetCompatibility = "1.8"
}

version = "1.0.0"
group= "erebus"
archivesBaseName = "Erebus"

minecraft {
    version = "1.11-13.19.0.2168"
	mappings = "snapshot_20161129"
    runDir = "run"
}

processResources {
     from(sourceSets.main.resources.srcDirs) {
          include 'mcmod.info'
          expand 'version': project.version, 'mcversion': project.minecraft.version
     }

     from(sourceSets.main.resources.srcDirs) {
          exclude 'mcmod.info'
     }
}